--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Node</title>
-</head>
+<%- include("./partials/head.ejs") %>
 <body>
   <div class="background"></div>
-  <h1>404 error!</h1>
+
+  <div class="error">
+    <h1 class="text error-text">404 error</h1>
+    <p>you are trying to go a page that does not exist, sorry! try <span class="link">https://dear-diary-roks.onrender.com/blogs</span></p>
+  </div>
+
+  <%- include("./partials/footer.ejs") %>
 </body>
 </html>
