--- a/views/details.ejs
+++ b/views/details.ejs
@@ -10,9 +10,9 @@
     <div class="blog-body content">
       <p class="blog-body"><%= blog.body %></p>
     </div>
-    <a class="delete" data-doc="<%= blog._id %>">
+    <!-- <a class="delete" data-doc="<%= blog._id %>">
         <img src="/trashcan.svg" alt="delete icon"/>
-    </a>
+    </a> -->
   </div>
 
   <%- include("./partials/footer.ejs") %>
