--- a/views/create.ejs
+++ b/views/create.ejs
@@ -11,7 +11,7 @@
     <form action="/blogs" method="POST">
       <label for="title">Blog title:</label>
       <input type="text" id="title" name="title" required>
-      <label for="snippet">Blog snippet:</label>
+      <label for="snippet">Your Name:</label>
       <input type="text" id="snippet" name="snippet" required>
       <label for="body">Blog body:</label>
       <textarea id="body" name="body" required></textarea>
